<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/main_bg"
              android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
                  android:text="@string/exchangecallsuccess"
                  android:textSize="@dimen/text_size18"
                  android:textStyle="bold"
                  android:layout_gravity="center_horizontal"
                  android:layout_margin="@dimen/space_12"
                  android:textColor="@color/black"
                  android:id="@+id/tv_exchange_call_title"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:textColor="@color/black"
                  android:layout_margin="@dimen/space_12"
                  android:textSize="@dimen/text_size14"
                  android:id="@+id/tv_exchange_call_content"
                  android:text="@string/exchangecallsuccesscontent"
                  android:layout_height="wrap_content"/>

        <Button android:layout_width="match_parent"
                android:background="@drawable/btn_selector"
                android:text="@string/getit"
                android:textSize="@dimen/text_size24"
                android:id="@+id/btn_exchange_call"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/space_60"
                android:layout_marginRight="@dimen/space_60"
                android:layout_marginBottom="@dimen/space_12"
                android:layout_height="wrap_content"/>
</LinearLayout>