<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/main_bg"
              android:layout_height="match_parent">
    <include layout="@layout/title_bar" android:id="@+id/more_titlebar"/>

    <LinearLayout style="@style/login_regist"
                  android:background="@color/white"
            >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/login_phone"
                  android:textColor="@color/text_content"
                  android:textSize="@dimen/text_size21" android:padding="@dimen/space_15"/>
        <EditText android:layout_width="match_parent" android:layout_height="match_parent"
                  android:id="@+id/tv_regist_phone"
                  android:inputType="phone"/>
    </LinearLayout>

    <LinearLayout style="@style/login_regist"
                  android:background="@color/white"
                  android:layout_marginTop="1dp"
            >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="密码    "
                  android:textColor="@color/text_content"
                  android:textSize="@dimen/text_size21" android:padding="@dimen/space_15"/>
        <EditText android:layout_width="match_parent" android:layout_height="match_parent"
                  android:id="@+id/tv_regist_password"
                  android:inputType="textPassword"/>
    </LinearLayout>

    <RelativeLayout android:layout_width="match_parent"
                  android:background="@color/white"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_12"
                    android:layout_marginBottom="@dimen/line_height">
        <EditText android:layout_width="match_parent"
                  android:hint="@string/question"
                  android:id="@+id/et_question"
                  android:layout_height="wrap_content" android:layout_toLeftOf="@+id/ibtn_login_arrow"
                  android:padding="@dimen/space_15"/>
        <ImageButton android:layout_width="wrap_content"
                     android:id="@+id/ibtn_login_arrow"
                     android:background="@color/transparency"
                     android:padding="@dimen/space_15"
                     android:src="@drawable/btn_entry_arrow"
                     android:layout_height="wrap_content" android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <EditText android:layout_width="match_parent"
              android:id="@+id/et_answer"
              android:background="@color/white"
              android:hint="@string/answer"
              android:layout_height="wrap_content" android:padding="@dimen/space_15"/>

    <TextView android:layout_width="match_parent"
              android:textColor="@color/black"
              android:text="@string/alterpassword"
              android:textSize="@dimen/text_size16"
              android:layout_margin="@dimen/space_12"
              android:layout_height="wrap_content"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_complite"
            android:text="@string/complite"
            android:textSize="@dimen/text_size21"
            android:background="@drawable/btn_selector" android:layout_marginLeft="@dimen/space_30"
            android:layout_marginRight="@dimen/space_30" android:layout_marginTop="@dimen/space_7"/>

</LinearLayout>